--- a/GaleriaDeArte/nbproject/project.properties
+++ b/GaleriaDeArte/nbproject/project.properties
@@ -28,8 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.hibernate-release-5.4.33.Final.zip=..\\..\\..\\Downloads\\hibernate-release-5.4.33.Final.zip
-file.reference.mysql-connector-java-8.0.30.zip=..\\..\\..\\Downloads\\mysql-connector-java-8.0.30.zip
+file.reference.derby.jar=../../db-derby-10.14.2.0-bin/lib/derby.jar
+file.reference.derbyclient.jar=../../db-derby-10.14.2.0-bin/lib/derbyclient.jar
+file.reference.hibernate-release-5.4.33.Final.zip=../../../Downloads/hibernate-release-5.4.33.Final.zip
+file.reference.mysql-connector-java-8.0.30.zip=../../../Downloads/mysql-connector-java-8.0.30.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,8 +46,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.30.zip}:\
-    ${file.reference.hibernate-release-5.4.33.Final.zip}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.hibernate-release-5.4.33.Final.zip}:\
+    ${file.reference.mysql-connector-java-8.0.30.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
